# KV-storage-api

./: .pre-commit-config.yaml  README.md  docker-compose.yml  justfile  tarantool.conf.lua
auth/: .dockerignore  Dockerfile  config.py  dto.py  endpoints.py  main.py  pyproject.toml  utils.py
auth/tests/: test_auth.py
kv-api/: .dockerignore  pyproject.toml
kv_api/: .env_template  Dockerfile  config.py  main.py  pyproject.toml
kv_api/application/: __init__.py  exceptions.py  services.py
kv_api/common/: __init__.py  base_exception.py
kv_api/presentation/: __init__.py  dto.py  endpoints.py  middleware.py
tarantool-cluster/: Dockerfile  router.lua  shard1.lua  shard2.lua
