[tool.poetry]
name = "auth"
version = "0.1.0"
description = ""
authors = ["dromanov <dtdzhalaev@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
starlette = "^0.38.2"
uvicorn = "^0.30.6"
python-jose = "^3.3.0"
pre-commit = "^3.8.0"
types-python-jose = "^3.3.4.20240106"
types-requests = "^2.32.0.20240712"
black = "^24.8.0"
pytest = "^8.3.2"
httpx = "^0.27.0"
tarantool = "^1.2.0"


[tool.black]
line-length = 99
exclude = "venv"

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
ignore_missing_imports = true
strict_optional = false
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
warn_redundant_casts = true
warn_unused_configs = true
strict_equality = true
exclude = ["deprecated"]

[tool.isort]
profile = "black"
force_grid_wrap = 1
multi_line_output = 3
honor_noqa = true
float_to_top = true
combine_as_imports = true
force_sort_within_sections = true
include_trailing_comma = true
line_length = 99
use_parentheses = true
known_third_party = ['django', 'rest_framework_extensions', 'aiogram']
known_first_party = ["common", "usersmanage", ]
skip = ["__init__.py", "app.py"]

[tool.ruff]
line-length = 99

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
