[tool.poetry]
name = "kv-api"
version = "0.1.0"
description = ""
authors = ["dromanov <dtdzhalaev@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
starlette = "^0.38.2"
uvicorn = "^0.30.6"
pre-commit = "^3.8.0"
types-requests = "^2.32.0.20240712"
black = "^24.8.0"
pytest = "^8.3.2"
httpx = "^0.27.0"
#asynctnt = "^2.3.0"
environs = "^11.0.0"
pydantic = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
